# Tutorial-Sway-UniswapV2

./: Cargo.toml  Forc.toml  PART-1-Pair.md  PART-2-Pair-Tests.md  README.md
FuniSwapV2Factory/: Forc.toml
FuniSwapV2Factory/src/: funi_factory.sw
FuniSwapV2Pair/: Forc.toml
FuniSwapV2Pair/src/: events.sw  funi_pair.sw
FuniSwapV2Router02/: Forc.toml
FuniSwapV2Router02/src/: funi_router02.sw
SRC20/: Forc.toml  src20.sw
tests/: harness.rs
tests/funi_pair/: liquidity.rs
tests/funi_router02/: deposits.rs
tests/src20/: token.rs
tests/utils/: funi_pair.rs  funi_router02.rs  instance.rs  mod.rs  setup.rs  src20.rs
