[package]
name = "client-test"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["JecikPo <jecikpo@gmail.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.62.0", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[dependencies]
rand = "0.8"
sha2 = { version = "0.10.7" }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
